2006-01-18  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Assert like there is no tomorrow, and cleanup a bit.

2006-01-18  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Initial, not-working, port.

	* src/sj-extractor.c:
	Free a GError.

2006-01-14  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.schemas.in:
	* src/sj-extractor.c:
	Tune buffers and paranoia default.

2006-01-14  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	It's aliiiiiive!

2006-01-14  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Fix Date metadata.

2006-01-14  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Fix state change detection and the timeout.
	(sj_extractor_extract_track): 

2006-01-13  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Rename variables, add comments.

2006-01-13  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Remove the threading hacks, #define the element names, update code
	for new API.

2006-01-13  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Fix cdparanoia check.

2006-01-13  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/sj-main,c:
	* src/sj-extractor.c:
	Initial port to GStreamer 0.10.
	
	* src/sj-play.c:
	Disable, deal with this later.

2006-01-10  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Protect against a NULL drive object (Marco Barisione, #326346).

2006-01-08  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-cdtext.c:
	Calculate the track durations.

2006-01-08  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Fix weird whitespace.

2006-01-08  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Cache the metadata.  This doesn't persist user changes or verify
	for updates, but it's a start.

2006-01-07  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	* src/gconf-bridge.[ch]:
	Add GConf bridge, copied from the libgconf-bridge module.

	* data/sound-juicer.glade:
	* src/sj-main.c: