@@ -1,6 +1,11 @@
 2006-01-18  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-play.c:
+	Use correct pipeline.
+
+2006-01-18  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-play.c:
 	Assert like there is no tomorrow, and cleanup a bit.
 
 2006-01-18  Ross Burton  <ross@burtonini.com>
